Fix: Refactore postController and ExceptionHandler